<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/libros"

    tools:context="agendaepn.epn.edu.ec.agendaepn2015.NuevaTareaActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center|left"
        android:text="@string/descripcion"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:id="@+id/etTarea"
        android:layout_alignParentBottom="true"
        android:theme="@style/AppTheme" />

    <CalendarView
        android:layout_width="326dp"
        android:layout_height="262dp"
        android:layout_gravity="center"
        android:id="@+id/calendarView"
        android:alpha=".5"/>

    <GridLayout
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_gravity="center|left|top"
            android:text="@string/tvFechaEnviado"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFechaEntrega"
            android:id="@+id/textView4"
            android:layout_row="0"
            android:layout_column="1" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/etFechaActual"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:id="@+id/etFechaEntrega"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFechaActual"
            android:id="@+id/btnFechaActual"
            android:onClick="escribirFechaActual"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFechaEntrega"
            android:id="@+id/btnFechaEntrega"
            android:onClick="escribirFechaEntrega"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center" />

    </GridLayout>

    <Button
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:id="@+id/btnAgregar"
        android:layout_gravity="center_horizontal"
        android:onClick="guardarTarea"
        android:layout_row="4"
        android:layout_column="0" />

</LinearLayout>